<resources>
    <string name="app_name">RadioInterfaceTest</string>

    <string name="setup_info">Click \'Setup\' button to setup all necessary permissions</string>
    <string name="setup_ok">Setup done, ready to process!</string>
    <string name="setup_fail">Setup failed!</string>
    <string name="btn_txt_setup">Setup</string>
    <string name="btn_txt_dial">Dial</string>
    <string name="btn_txt_accept">Accept Ringing Call</string>
    <string name="btn_txt_hangup">Hangup</string>
    <string name="btn_txt_decline">Decline Ringing Call</string>
    <string name="btn_txt_sendsms">Send SMS</string>
    <string name="btn_txt_receivesms">Receive SMS</string>
    <string name="btn_txt_senddata">Send Data</string>
    <string name="remote_number_info">Remote number for test:</string>
    <string name="sms_view_info">Received SMS messages:</string>
    <string name="sms_input_info">Sms text for test:</string>
    <string name="remote_ip_info">Remote IP for test:</string>
    <string name="confirm">Confirm</string>

    <string name="btn_view_sms_list">View SMS List</string>
    <string name="sms_sender">Received From: </string>
    <string name="sms_receiver">Sent To: </string>
    <string name="sms_content">SMS Content</string>
    <string name="sms_time">Time</string>
    <string name="sms_detail_title">SMS Details</string>
    <string name="sms_detail_sender">Received From: </string>
    <string name="sms_detail_receiver">Sent To: </string>
    <string name="sms_detail_body">Content: </string>
    <string name="sms_detail_time">Time: </string>
    <string name="sms_detail_phone_number">Receiving Phone Number: </string>
    <string name="sms_detail_sim_slot">SIM Slot: </string>
    <string name="sms_detail_sim_slot_unknown">Unknown</string>
    <string name="toast_all_sms_loaded">All SMS loaded</string>
    <string name="toast_new_sms_received_list_refreshed">New SMS received, list refreshed</string>
    <string name="notification_channel_name">SMS Notification</string>
    <string name="notification_channel_description">Notification for new SMS messages</string>
    <string name="notification_title">New SMS</string>
    <string name="enter_phone_number">Enter Phone Number</string>
    <string name="enter_sms_message">Enter SMS Message</string>
    <string name="send_sms">Send SMS</string>
    <string name="clear_number">Clear Number</string>
    <string name="clear_message">Clear Message</string>
</resources>