<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <LinearLayout
        android:id="@+id/setup_container"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="20dp"
        android:orientation="vertical"
        app:layout_constraintWidth_percent="0.75"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/setup_info"/>

        <Button
            android:id="@+id/btn_setup"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/btn_txt_setup"/>

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/btn_ping_test"
            android:text="Go to Ping Test" />

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/btn_shell_test"
            android:text="Go to Shell Test" />

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/btn_callback_test"
            android:text="Go to Callback Test" />
        <View
            android:layout_width="match_parent"
            android:layout_height="5dp" />
        <View
            android:layout_width="match_parent"
            android:layout_height="10dp"
            android:background="@color/material_dynamic_secondary90" />
    </LinearLayout>




    <LinearLayout
        android:id="@+id/main_container"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/setup_container"
        app:layout_constraintWidth_percent="0.75">


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/remote_number_info" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <EditText
                android:id="@+id/remote_number"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="3"
                android:inputType="phone"
                android:text="10086" />

            <Spinner
                android:id="@+id/spinner_telenumber"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1" />

            <Button
                android:id="@+id/btn_clear_number"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="X" />
        </LinearLayout>


        <Button
            android:id="@+id/btn_dial"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/btn_txt_dial" />

        <View
            android:layout_width="0dp"
            android:layout_height="5dp" />

        <Button
            android:id="@+id/btn_accept"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/btn_txt_accept" />

        <View
            android:layout_width="0dp"
            android:layout_height="5dp" />

        <Button
            android:id="@+id/btn_hangup"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/btn_txt_hangup" />

        <View
            android:layout_width="0dp"
            android:layout_height="5dp" />

        <Button
            android:id="@+id/btn_decline"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/btn_txt_decline"
            android:visibility="gone" />

        <View
            android:layout_width="0dp"
            android:layout_height="25dp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/sms_input_info" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <EditText
                android:id="@+id/sms_input"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="4"
                android:inputType="text"
                android:text="sample sms text" />

            <Button
                android:id="@+id/btn_clear_sms_text"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="X" />
        </LinearLayout>

        <Button
            android:id="@+id/btn_sendsms"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/btn_txt_sendsms" />

        <View
            android:layout_width="0dp"
            android:layout_height="5dp" />

        <Button
            android:id="@+id/btn_receivesms"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/btn_txt_receivesms"
            android:visibility="gone" />

        <View
            android:layout_width="0dp"
            android:layout_height="5dp" />

        <Button
            android:id="@+id/btn_senddata"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/btn_txt_senddata"
            android:visibility="gone" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="20dp"
        android:orientation="vertical"

        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textStyle="bold"
            android:text="@string/sms_view_info" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/info_view" />
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>